--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.3.11'
 
     repositories {
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
     }
 }
 
@@ -14,8 +16,11 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: "com.github.johnrengelman.shadow"
 
 sourceCompatibility = 1.8
+ext.ktor_version = '1.2.4'
+
 
 repositories {
     mavenCentral()
@@ -28,6 +33,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.beust:klaxon:5.0.1'
+    implementation "io.ktor:ktor-jackson:$ktor_version"
     // https://mvnrepository.com/artifact/net.time4j/time4j-core
     compile group: 'net.time4j', name: 'time4j-core', version: '4.38'
     compile group: 'net.time4j', name: 'time4j-calendar', version: '4.38'
@@ -42,6 +48,8 @@ dependencies {
     compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.4'
     compile group: 'com.github.sisyphsu', name: 'dateparser', version: '1.0.2'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    compile "io.ktor:ktor-server-core:$ktor_version"
+    compile "io.ktor:ktor-server-netty:$ktor_version"
 
 }
 
