--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
     compile "io.ktor:ktor-server-core:$ktor_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile 'org.apache.httpcomponents:httpclient:4.5.10'
 
 }
 
