--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build --experimental-scope-hoisting --public-url . index.html"
+    "build": "parcel build --experimental-scope-hoisting --global myCustomModule --public-url . index.html"
   }
 }
