--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
+
     }
 }
 
@@ -52,6 +53,7 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 
 }
 
