--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polygon-styles",
   "dependencies": {
-    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "ol": "6.1.1"
   },
   "devDependencies": {
